# saturn

./: .prettierignore  BUILD.md  LICENSE.md  README.md  index.html  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-tauri.yml
documentation/: bitmap.md  core saturn functionality.md  installation and running first file.md  registers and memory.md  syscalls.md
src/: App.vue  main.ts  router.ts  style.css
src-backend/: Cargo.toml
src-backend/src/: build.rs  channels.rs  decode.rs  device.rs  display.rs  execution.rs  hex_format.rs  keyboard.rs  lib.rs  regions.rs  shortcuts.rs  syscall.rs
src-backend/src/midi/: instruments.rs  mod.rs  note.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: midi-default.json
src-tauri/src/: access_manager.rs  auto_save.rs  build.rs  channels.rs  debug.rs  decode.rs  display.rs  execution.rs  export.rs  hex_format.rs  keyboard.rs  main.rs  menu.rs  midi.rs  state.rs  syscall.rs  testing.rs  time.rs  watch.rs
src-tauri/src/cpu/: cpu.rs  decoder.rs  disassemble.rs  memory.rs  mod.rs  state.rs
src-tauri/src/elf/: elf.rs  header.rs  mod.rs  program.rs
src-tauri/src/midi/: fetch.rs  handler.rs  instruments.rs  mod.rs  protocol.rs
src-tauri/src/state/: commands.rs  device.rs  execution.rs  mod.rs
src-wasm/: .gitignore  Cargo.toml  pack.sh
src-wasm/.cargo/: config.toml
src-wasm/src/: console.rs  events.rs  lib.rs  midi.rs  time.rs
src/components/: BuildInfo.vue  Console.vue  Cursor.vue  DebugWindow.vue  Editor.vue  EditorBody.vue  ErrorOverlay.vue  ExportModal.vue  ExportOverlay.vue  FindOverlay.vue  FindWindow.vue  GotoOverlay.vue  Modal.vue  SaveModal.vue  SelectionOverlay.vue  SettingsModal.vue  StyledButton.vue  Suggestions.vue  SymbolHighlightOverlay.vue  Tab.vue  TabBar.vue  TabBarItems.vue
src/components/console/: BitmapTab.vue  BreakTab.vue  Console.vue  ConsoleTab.vue  MemoryTab.vue  NumberField.vue  RegisterItem.vue  RegistersTab.vue  TestsTab.vue  ToggleField.vue
src/snippets/: GettingStarted.vue  Interpreter.vue
src/state/: backend.ts  console-data.ts  cursor-state.ts  editor-cursor.ts  editor-settings.ts  editor-state.ts  editor-undo.ts  state.ts  tabs-state.ts
src/utils/: alt-consume.ts  breakpoints.ts  cursor.ts  debug.ts  disassemble.ts  editor-cursor.ts  editor-debug.ts  editor-undo.ts  editor.ts  error-highlight.ts  events.ts  find.ts  goto.ts  highlight.ts  highlights.ts  interact-wasm.ts  midi.ts  mips.ts  platform-shortcuts.ts  save-modal.ts  select-file.ts  settings.ts  shortcut-key.ts  split-lines.ts  storage.ts  suggestions.ts  symbol-highlight.ts  tabs.ts  text-size.ts  virtualization.ts  window.ts
src/utils/definitions/: midicube.d.ts
src/utils/highlighter/: highlighter.ts  mips.ts  plain.ts
src/utils/languages/: language.ts  plain.ts  suggestions.ts
src/utils/languages/mips/: language.ts  lexer.ts  suggestions.ts
src/utils/lezer-mips/: autocomplete.ts  index.ts  lezer-lang.ts  modes.ts  stream-lang.ts  syntax.grammar  syntax.grammar.terms.d.ts  tokenizer.ts
src/utils/mips/: mips.ts  tauri-backend.ts  wasm-backend.ts  wasm-worker-message.ts  wasm-worker.ts
src/utils/query/: access-manager.ts  alt-consume.ts  select-file.ts  serialize-files.ts  shortcut-key.ts  suggestion-styles.ts  text-size.ts
src/utils/wasm/: asm.d.ts  asm.js  asm_bg.js  asm_bg.wasm  asm_bg.wasm.d.ts
