[package]
name = "saturn_backend"
version = "0.1.9"
description = "Logical bakend for the Saturn IDE."
authors = ["desgroup"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.29"

num = "0.4.1"
byteorder = "1.5.0"
base64 = "0.21.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
async-trait = "0.1.77"
log = "0.4.22"

titan = { git = "https://github.com/1whatleytay/titan.git", branch = "main" }
