[package]
name = "saturn"
version = "0.1.5"
description = "A modern MIPS IDE."
authors = ["desgroup"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wry = { version = "0.23.4", features = ["linux-headers"] }
tauri = { version = "1.2.4", features = ["api-all", "time"] }
tokio = { version = "1.23.0", features = ["time", "macros"] }

hex = "0.4.3"
futures = "0.3.26"
tokio-util = "0.7.4"
percent-encoding = "2.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.6"
uuid = "1.3.0"

titan = { git = "https://github.com/1whatleytay/titan.git", branch = "main" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
