[package]
name = "saturn"
version = "0.1.7"
description = "A modern MIPS IDE."
authors = ["desgroup"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["api-all", "time"] }
tokio = { version = "1.33.0", features = ["time", "macros"] }

hex = "0.4.3"
futures = "0.3.29"
tokio-util = "0.7.10"
percent-encoding = "2.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
uuid = "1.5.0"
async-trait = "0.1.74"
num = "0.4.1"
notify = "6.1.1"
byteorder = "1.5.0"
base64 = "0.21.5"

titan = { git = "https://github.com/1whatleytay/titan.git", branch = "main" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
