[package]
name = "saturn_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
serde-wasm-bindgen = "0.6.4"

console_error_panic_hook = { version = "0.1.7", optional = true }

getrandom = { version = "0.2.12", features = ["js"] }

saturn_backend = { path = "../src-backend" }
titan = { git = "https://github.com/1whatleytay/titan.git", branch = "main" }
